Use the new OpenAPI foojay repository.